--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Google Container Shortcut",
   "version": "1.2",
-  "description": "Google Container Shortcut",
+  "description": "Open Google containers using a dedicated button or a keyboard shortcut.",
   "applications": {
     "gecko": {
       "id": "firefox.google.container.shortcut@ayusaxena.com"
