--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Google Container Shortcut",
-  "version": "1.2",
+  "version": "1.3",
   "description": "Open Google containers using a dedicated button or a keyboard shortcut.",
   "applications": {
     "gecko": {
@@ -9,11 +9,12 @@
     }
   },
   "icons": {
-    "48": "assets/icon.png"
+    "48": "assets/icon48.png",
+    "96": "assets/icon96.png"
   },
   "options_ui": {
     "browser_style": true,
-    "page": "options.html"
+    "page": "options/options.html"
   },
   "permissions": [
     "tabs",
@@ -38,8 +39,8 @@
   "browser_action": {
     "browser_style": true,
     "default_icon": {
-      "16": "assets/icon.png",
-      "32": "assets/icon.png"
+      "48": "assets/icon48.png",
+      "96": "assets/icon96.png"
     }
   }
 }
