--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
   "permissions": [
     "tabs",
     "contextualIdentities",
+    "contextMenus",
     "cookies",
     "storage",
     "webRequest",
